--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "restaurant-page",
+  "name": "todo-list",
   "version": "1.0.0",
-  "description": "https://www.theodinproject.com/lessons/node-path-javascript-restaurant-page",
+  "description": "A simple to-do list",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
